--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -30,7 +30,7 @@
                 <div class="card-header">Editar Registro</div>
                 <div class="card-body">
                     <form action="/update" method="POST">
-                        <input id="id" name="id" value="<%= users.id %>" hidden>
+                        <input id="id" name="id" value="<%= users.userId %>" >
 
 
                         <div class="mb-3">
